tests/codegen/errors/reader/typeclass-data-layout/atom.reader.error.reader.class.missing.type.var/reader-class-missing-type-var.mon
;; TEST-ID: tests.codegen.reader-error.reader-class-missing-type-var
;; TEST-TIER: regression
;; TEST-STATUS: passing-baseline-2026-06-15
;; TEST-SECTION: codegen
;; TEST-CATEGORY: 90-diagnostics
;; TEST-SUBSET: reader-errors/typeclass-data-layout
;; TEST-CONTEXT: monadc.context.language.codegen-branch-coverage, monadc.context.language.codegen-atom-web, monadc.context.language.reader-error-coverage
;; TEST-PURPOSE: Trigger and pin diagnostic: Expected type variable after class name
;; TEST-ATOM: atom.reader.error.reader.class.missing.type.var
;; TEST-CODEGEN-ATOM: atom.reader.error.reader.class.missing.type.var
;; TEST-QUALITY: diagnostic-branch-regression
;; TEST-EXPECT: fail:compile
;; TEST-READER-ERROR: Expected type variable after class name
;; TEST-READER-PATH: reader.c:4117 parser.class
;; TEST-CODEGEN-PATH: diagnostic.parser.class
;; TEST-TAG: fail
;; TEST-TAG: diagnostic
;; TEST-TAG: reader
;; TEST-COVERAGE: reader.c:4117 Expected type variable after class name
;; TEST-USES-ATOM: atom.reader.error.reader.class.missing.type.var
;; TEST-USES-ATOM: atom.codegen.category.90.diagnostics
;; TEST-USES-ATOM: atom.reader.error
;; TEST-USES-ATOM: atom.reader.error.family.parser.class
;; TEST-REFINES: atom.codegen.category.90.diagnostics
;; TEST-REFINES: atom.reader.error
;; TEST-MENU: errors/reader/typeclass-data-layout/atom.reader.error.reader.class.missing.type.var
;; TEST-MENU-PATH: codegen/errors/reader/typeclass-data-layout/atom.reader.error.reader.class.missing.type.var
;; TEST-ATOM-LEAF: atom.reader.error.reader.class.missing.type.var
;; TEST-CLI-TARGET: codegen errors reader typeclass-data-layout

(module Main)
(class Eq)
